--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -5,7 +5,7 @@ $home-image: url(../img/background.jpg);
 $background-opacity: 0.9;
 
 @mixin easeOut {
-  transition: all 0.5s ease-out;
+  transition: all .5s ease-out;
 }
 
 @mixin background {
@@ -22,43 +22,9 @@ $background-opacity: 0.9;
         right: 0;
         width: 100%;
         height: 100%;
-        z-index: -1;
         background: rgba($primary-color, $background-opacity);
+        z-index: -1;
       }
     }
-  }
-}
-
-// Set Text Color
-@function set-text-color($color) {
-  @if (lightness($color) > 40) {
-    @return #000;
-  } @else {
-    @return #fff;
-  }
-}
-
-// Media Query Mixins
-@mixin mediaSm {
-  @media screen and (max-width: 500px) {
-    @content;
-  }
-}
-
-@mixin mediaMd {
-  @media screen and (max-width: 768px) {
-    @content;
-  }
-}
-
-@mixin mediaLg {
-  @media screen and (min-width: 769px) and (max-width: 1170px) {
-    @content;
-  }
-}
-
-@mixin mediaXl {
-  @media screen and (min-width: 1171px) {
-    @content;
   }
 }
