--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,18 +1,14 @@
-// Widescreens
+// Wide screens
 @include mediaXl {
-  .projects {
-    grid-template-columns: repeat(4, 1fr);
-  }
+
 }
 
-// Desktops & Laptops
+// Desktops and Laptops
 @include mediaLg {
-  .projects {
-    grid-template-columns: repeat(3, 1fr);
-  }
+  
 }
 
-// Tablets & Small Laptops
+// Tablets and small Laptops
 @include mediaMd {
   main {
     align-items: center;
@@ -24,14 +20,13 @@
     }
   }
 
-  ul.menu-nav,
-  div.menu-branding {
+  ul.menu-nav, div.menu-branding {
     float: none;
     width: 100%;
     min-height: 0;
 
     &.show {
-      transform: translate3d(0, 0, 0);
+      transform: translate3d(0,0,0);
     }
   }
 
@@ -51,38 +46,11 @@
       height: 150px;
     }
   }
-
-  .about-info {
-    grid-template-areas:
-      'bioimage'
-      'bio'
-      'job1'
-      'job2'
-      'job3';
-
-    grid-template-columns: 1fr;
-  }
-
-  .projects {
-    grid-template-columns: repeat(2, 1fr);
-  }
 }
 
 // Smartphones
 @include mediaSm {
-  main {
-    padding: 2rem;
-    #home h1 {
-      margin-top: 10vh;
-    }
-
-    .lg-heading {
-      margin-top:1rem;
-      font-size: 5rem;
-    }
-  }
-
-  .projects {
-    grid-template-columns: 1fr;
+  main#home h1 {
+    margin-top: 10vh;
   }
 }
