--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,33 +1,40 @@
-$primary-color: #444;
-$secondary-color: #eece1a;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Roboto+Slab:wght@400;500;600&display=swap');
+
+$primary-color: #293241;
+$secondary-color: #82afdc;
+$tertiary-color: #0d1926;
+$primary-text: #fff;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
-$background-opacity: 0.9;
+$background-opacity: .9;
+$sans-serif: 'Inter', sans-serif;
+$serif: 'Roboto Slab', serif;
+
 
 @mixin easeOut {
   transition: all .5s ease-out;
 }
 
-@mixin background {
-  @if $show-home-image {
-    &#bg-img {
-      background: $home-image;
-      background-attachment: fixed;
-      background-size: cover;
+// @mixin background {
+//   @if $show-home-image {
+//     &#bg-img {
+//       background: $home-image;
+//       background-attachment: fixed;
+//       background-size: cover;
 
-      &:after {
-        content: '';
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba($primary-color, $background-opacity);
-        z-index: -1;
-      }
-    }
-  }
-}
+//       &:after {
+//         content: '';
+//         position: absolute;
+//         top: 0;
+//         right: 0;
+//         width: 100%;
+//         height: 100%;
+//         background: rgba($primary-color, $background-opacity);
+//         z-index: -1;
+//       }
+//     }
+//   }
+// }
 
 // Set text color
 @function set-text-color($color) {
