--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,196 +3,212 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  @include background;
-  background: $primary-color;
+  background-color: darken($primary-color, 5%);
   color: set-text-color($primary-color);
   height: 100vh;
   margin: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: $sans-serif;
   line-height: 1.5;
+  position: relative;
 }
 
-// Headings
-h1, h2, h3 {
-  margin: 0;
-  font-weight: 400;
-
-  &.lg-heading {
-    font-size: 6rem;
-  }
-
-  &.sm-heading {
-    margin-bottom: 2rem;
-    padding: 0.2rem 1rem;
-    background: rgba(lighten($primary-color, 2), 0.5);
-  }
-}
-
-a {
-  color: #fff;
-  text-decoration: none;
-}
-
-header {
+// Set up smart menu???
+.menu-nav {
   position: fixed;
-  z-index: 2;
   width: 100%;
-}
+  top: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  list-style-type: none;
+  padding: 1rem .5rem 1rem 0;
+  background-color: darken($primary-color, 5%);
+  z-index: 10;
 
-.text-secondary {
-  color: $secondary-color;
-}
-
-main {
-  padding: 4rem;
-  // height: 100%;
-  min-height: calc(100vh - 60px);
-
-  .icons {
-    margin-top: 1rem;
-
-    a {
-      padding: 0.4rem;
-
-      &:hover {
-        color: $secondary-color;
-        @include easeOut;
-      }
-    }
-  }
-
-  &#home {
-    overflow: hidden;
-
-    h1 {
-      margin-top: 20vh;
-    }
+  .nav-link {
+    color: #fff;
+    font-family: $serif;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    margin: 0 1.5rem;
+    transition: all ease .25s;
   }
 }
 
-.about-info {
-  display: grid;
-  grid-template-areas: 
-    'bioimage bio bio'
-    'job1 job2 job3';
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 30px;
+.nav-item {
+  position: relative;
 }
 
-.bio-image {
-  grid-area: bioimage;
-  margin: auto;
-  border-radius: 50%;
-  border: 3px solid $secondary-color;
+.nav-item:hover .nav-link {
+  color: darken(#fff, 50%);
 }
 
-.bio {
-  grid-area: bio;
-  font-size: 1.5rem;
+.nav-item.current .nav-link:before {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  background-color: $secondary-color;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 60%;
+  height: 40%;
+  max-width: 100%;
+  margin: 0 auto;
+  transition: all ease-out 500ms;
 }
 
-.job {
-  background: lighten($primary-color, 5);
-  padding: 0.5rem;
-  border-bottom: 5px solid $secondary-color;
+.scroll-prompt {
+  position: absolute;
+  z-index: 10;
+  bottom:  2rem;
+  left:  2rem;
 }
 
-.job-1 {
-  grid-area: job1;
+.js-scroll {
+  opacity: 0;
+  transition: opacity 500ms;
 }
 
-.job-2 {
-  grid-area: job2;
+.js-scroll.scrolled {
+  opacity: 1;
 }
 
-.job-3 {
-  grid-area: job3;
+.scrolled.fade-in-bottom {
+  animation: fade-in-bottom 1s ease-in-out both;
 }
 
-// Work/Projects
-.projects {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: .7rem;
+@keyframes fade-in-bottom {
+  0% {
+    -webkit-transform: translateY(50px);
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.home {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 90%;
+  gap: 4rem;
+  z-index: 5;
 
   img {
-    width: 100%;
-    border: 3px solid #fff;
-
-    &:hover {
-      opacity: 0.5;
-      border-color: $secondary-color;
-      @include easeOut;
-    }
+    border-radius: 50%;
+    border: .5rem solid $secondary-color;
+    height: 200px;
+    width: 200px;
   }
 }
 
-// Contact Page
-.boxes {
+.lg-heading {
+  font-size: 3.5rem;
+
+  span {
+    color: $secondary-color;
+  }
+}
+
+.sm-heading {
+  font-family: $serif;
+  font-weight: 500;
+}
+
+.icons {
+  width: 10rem;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
   align-items: center;
+  justify-content: space-between;
   margin-top: 1rem;
 
-  div {
-    font-size: 2rem;
-    border: 3px solid #fff;
-    padding: 1.5rem 2.5rem;
-    margin-bottom: 3rem;
-    @include easeOut;
+  a {
+    color: #fff;
+    will-change: transform;
+    transition: all ease .25s;
 
     &:hover {
-      padding: 0.5rem 1.5rem;
-      background: $secondary-color;
-      color: set-text-color($secondary-color);
-
-      span {
-        color: set-text-color($secondary-color);
-      }
+      scale: 1.05;
     }
   }
 }
 
-// Button styles
-.btn {
-  display: block;
-  padding: 0.5rem 1rem;
-  border: 0;
-  margin-bottom: 0.3rem;
-  &:hover {
-    background: $secondary-color;
-    color: set-text-color($secondary-color);
+.skewed {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: $primary-color;
+  z-index: 0;
+  transform: skewY(-5deg);
+  transform-origin: top left;
+}
+
+.about {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 5fr 1fr;
+  place-content: center;
+  z-index: 5;
+  margin: 8rem 5rem;
+
+  .about-heading {
+    grid-column: 2;
+    font-family: $sans-serif;
+    font-size: 2.5rem;
+    margin: 1rem 0;
   }
-}
 
-.btn-dark {
-  @extend .btn;
-  background: darken($primary-color, 50);
-  color: #fff;
-}
+  .about-text {
+    grid-column: 2;
+    font-family: $serif;
+    font-size: 1.4rem;
+    line-height: 1.4;
+    margin: .5rem 0;
 
-.btn-light {
-  @extend .btn;
-  background: lighten($primary-color, 50);
-  color: #333;
+    a {
+      color: #fff;
+      transition: all ease .25s;
+    }
+
+    a:hover {
+      color: darken(#fff, 50%);
+    }
+  }
+
+  .icons {
+    grid-column: 2;
+  }
 }
 
 #main-footer {
+  width: 100%;
+  background: $primary-color;
   text-align: center;
-  padding: 1rem;
-  background: darken($primary-color, 10);
-  color: set-text-color($primary-color);
-  height: 60px;
-  // position: absolute;
-  // bottom: -100%;
-  // width: 100%;
+  padding: .5rem;
 }
 
-
+// Dark mode test
+// html {
+//   filter: invert(1);
+// }
 
 @import 'mobile';
 
