--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,10 +1,10 @@
 // Menu Button
 .menu-btn {
   display: none;
-  position: absolute;
-  z-index: 3;
-  right: 35px;
-  top: 35px;
+  position: fixed;
+  z-index: 25;
+  right: 1rem;
+  top: 1rem;
   cursor: pointer;
   @include easeOut;
 
@@ -12,31 +12,30 @@
     width: 28px;
     height: 3px;
     margin: 0 0 5px 0;
-    background: #fff;
+    background: $primary-text;
     @include easeOut;
   }
-}
   // Rotate into X with menu lines
-//   &.close {
-//     transform: rotate(180deg);
+  &.close {
+    transform: rotate(180deg);
 
-//     .btn-line {
-//       // Line - Rotate
-//       &:nth-child(1) {
-//         transform: rotate(45deg) translate(5px, 5px);
-//       }
+    .btn-line {
+      // Line - Rotate
+      &:nth-child(1) {
+        transform: rotate(45deg) translate(5px, 5px);
+      }
 
-//       // Line 2 - Hide
-//       &:nth-child(2) {
-//         opacity: 0;
-//       }
-//       // Line 3 - Rotate
-//       &:nth-child(3) {
-//         transform: rotate(-45deg) translate(7px, -6px);
-//       }
-//     }
-//   }
-// }
+      // Line 2 - Hide
+      &:nth-child(2) {
+        opacity: 0;
+      }
+      // Line 3 - Rotate
+      &:nth-child(3) {
+        transform: rotate(-45deg) translate(7px, -6px);
+      }
+    }
+  }
+}
 
 
 
