--- a/scss/main.scss
+++ b/scss/main.scss
@@ -67,6 +67,7 @@ body {
   background-color: $primary-color-dark;
   box-shadow: 2px 2px 16px $primary-color-dark;
   z-index: 10;
+  transition: all ease .5s;
 
   .nav-link {
     color: $primary-text;
@@ -95,7 +96,7 @@ body {
 // Might need an animation for this
 .theme-menu {
   opacity: 0;
-  position: absolute;
+  position: fixed;
   top: 4rem;
   right: 2rem;
   display: flex;
