Desktop styling and layout

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -10,6 +10,7 @@ $tertiary-color: var(--tertiary-color);
 $accent-color: var(--accent-color);
 $primary-color-dark: var(--primary-color-dark);
 $primary-text: var(--primary-text);
+$inverted-text: var(--inverted-text);
 $sans-serif: 'Inter', sans-serif;
 $serif: 'Roboto Slab', serif;
 
