Added mobile styling to projects.html

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -37,6 +37,29 @@
   .about {
     margin: 3rem;
   }
+
+  .projects {
+    padding: 0;
+    margin: 2rem 0;
+
+    .description h1 {
+      margin-top: 3rem;
+    }
+  }
+
+  .project-card {
+    flex-direction: column;
+
+    img {
+      width: 100%;
+    }
+
+    .project-content {
+      width: 100%;
+      padding: 0;
+      margin-top: 2rem;
+    }
+  }
 }
 
 // Smartphones
@@ -88,5 +111,9 @@
 
   .about {
     margin: 4rem 0;
+  }
+
+  .projects {
+    margin: 0 0 2rem;
   }
 }
