--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -116,4 +116,23 @@
   .projects {
     margin: 0 0 2rem;
   }
+
+  .contact {
+    margin: 3rem 0;
+    padding: 0;
+
+    h1 {
+      margin: 1rem 0;
+    }
+
+    h2 {
+      margin-right: .8rem;
+    }
+
+    form {
+      .wrap-input {
+        width: 100%;
+      }
+    }
+  }
 }
