--- a/scss/main.scss
+++ b/scss/main.scss
@@ -378,6 +378,142 @@ body {
   border-bottom: none;
 }
 
+.contact {
+  position: relative;
+  margin: 2rem;
+  padding: 4rem;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  z-index: 5;
+
+  h1, h2, .icons, form {
+    grid-column: 2 / -2;
+  }
+
+  form {
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    margin-top: 1rem;
+
+    .wrap-input {
+      position: relative;
+      width: 60%;
+    }
+
+    input[type="text"], input[type="email"], textarea {
+      width: 100%;
+      min-height: 2rem;
+      margin: .25rem 0;
+      padding: 1rem .25rem .5rem;
+      // background-blend-mode: soft-light;
+      background-color: transparent;
+      border: none;
+      border-bottom: 1px solid $accent-color;
+      color: $primary-text;
+      font-family: $sans-serif;
+      font-size: 1.25rem;
+
+      &:placeholder {
+        opacity: .8;
+        color: $primary-text;
+      }
+    }
+
+    textarea {
+      height: 10rem;
+    }
+
+    span {
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      pointer-events: none;
+
+      &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        left: 0;
+        width: 0%;
+        height: 2px;
+        -webkit-transition: all .4s;
+        -o-transition: all .4s;
+        -moz-transition: all .4s;
+        transition: all .4s;
+        background: $accent-color;
+      }
+    }
+
+    input[type="text"] ~ span:before, input[type="email"] ~ span:before {
+      bottom: 2px;
+    }
+
+    textarea ~ span:before {
+      bottom: 8px;
+    }
+
+    input[type="text"]:focus, input[type="email"]:focus, textarea:focus {
+      outline: none;
+    }
+
+    input[type="text"]:focus ~ span:before, input[type="email"]:focus ~ span:before, textarea:focus ~ span:before {
+      width: 100%;
+    }
+
+    // input[type="text"]:before, input[type="email"]:before, textarea:before  {
+    //   position: absolute;
+    //   display: block;
+    //   bottom: 0;
+    //   left: 0;
+    //   content: '';
+    //   width: 100%;
+    //   height: 2px;
+    //   background-color: $accent-color;
+    // }
+
+    // input[type="text"], input[type="email"] {
+    //   border-bottom: 2px solid $accent-color;
+    // }
+
+    textarea {
+      resize: none;
+    }
+
+    input[type="submit"] {
+      background-color: transparent;
+      color: $primary-text;
+      border: 1px solid $accent-color;
+      padding: .5rem 1.5rem;
+      margin: 1rem 0;
+      text-transform: uppercase;
+      font-family: $serif;
+      font-size: 1.5rem;
+      transition: all .5s ease;
+
+      &:hover {
+        background: $primary-text;
+        color: $primary-color-dark;
+        border-color: $primary-text;
+      }
+
+      &:focus, &:focus-within, &:focus-visible {
+        border: 1px dashed $accent-color;
+        outline: none;
+      }
+    }
+  }
+}
+
+.hidden {
+  display: none;
+}
+
 #main-footer {
   width: 100%;
   background: $primary-color;
