Adjusting some styling on contact form for tablet size

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -60,6 +60,14 @@
       margin-top: 2rem;
     }
   }
+
+  .contact {
+    form {
+      .wrap-input {
+        width: 100%;
+      }
+    }
+  }
 }
 
 // Smartphones
