Adjusting footer positioning

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -540,6 +540,8 @@ body {
 }
 
 #main-footer {
+  position: absolute;
+  bottom: 0;
   width: 100%;
   background: $primary-color;
   text-align: center;
