--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -25,7 +25,7 @@
 // Tablets and small Laptops
 @include mediaMd {
   .home {
-    padding: 2rem;
+    padding: 6.5rem 2rem 2rem;
     gap: 3rem;
     height: 70%;
   }
